--- a/package.json
+++ b/package.json
@@ -12,7 +12,13 @@
   },
   "dependencies": {
     "@quasar/extras": "^1.0.0",
-    "axios": "^0.21.1",
+    "@types/lodash-es": "^4.17.7",
+    "axios": "^0.21.4",
+    "buffer": "^6.0.3",
+    "chap": "^0.4.0",
+    "crypto-js": "^4.1.1",
+    "lodash-es": "^4.17.21",
+    "md5": "^2.3.0",
     "pinia": "^2.0.11",
     "quasar": "^2.6.0",
     "vue": "^3.0.0",
