--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
     "axios": "^0.21.4",
     "buffer": "^6.0.3",
     "chap": "^0.4.0",
+    "chart.js": "^4.2.1",
     "crypto-js": "^4.1.1",
     "lodash-es": "^4.17.21",
     "md5": "^2.3.0",
     "pinia": "^2.0.11",
     "quasar": "^2.6.0",
     "vue": "^3.0.0",
+    "vue-chart-3": "^3.1.8",
     "vue-i18n": "^9.2.2",
     "vue-router": "^4.0.0",
     "vue3-pdfjs": "^0.1.6"
